--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,13 +1,13 @@
-@import './c-card';
-@import './c-site-header';
-@import './c-site-footer';
-@import './c-sidebar';
-@import './c-table';
-@import './c-toc';
-@import './c-box';
-@import './c-copy';
-@import './c-sidenav';
-@import './c-home';
+@import "./c-card";
+@import "./c-site-header";
+@import "./c-site-footer";
+@import "./c-sidebar";
+@import "./c-table";
+@import "./c-toc";
+@import "./c-box";
+@import "./c-copy";
+@import "./c-sidenav";
+@import "./c-home";
 
 .c-content {
   display: grid;
@@ -16,6 +16,7 @@
 
   @media (max-width: 1023px) {
     grid-template-columns: 1fr;
+    display: block;
   }
 }
 
